Update backend code (Comment, branch, inventory)